--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //Meta tag Keywords -->
 
 	<!-- Custom-Files -->
-	<link rel="stylesheet" href="../static/Project/css/bootstrap.css">
+	<link rel="stylesheet" href="bootstrap.css">
 	<!-- Bootstrap-Core-CSS -->
-	<link href="../static/Project/css/css_slider.css" type="text/css" rel="stylesheet" media="all">
+	<link href="css_slider.css" type="text/css" rel="stylesheet" media="all">
 	<!-- banner slider -->
-	<link rel="stylesheet" href="../static/Project/css/style.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="style.css" type="text/css" media="all" />
 	<!-- Style-CSS -->
-	<link href="../static/Project/css/font-awesome.min.css" rel="stylesheet">
+	<link href="font-awesome.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:wght@500&display=swap" rel="stylesheet">
 	<!-- Font-Awesome-Icons-CSS -->
 	<!-- //Custom-Files -->
