--- a/CommonPage.html
+++ b/CommonPage.html
@@ -6,13 +6,13 @@
 <meta name="keywords" content="Registration / Login form Responsive Widget, Login forms,Flat Pricing tables,Flat Drop downs  Sign up Web forms, Login sign up Responsive web Forms," />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- Custom CSS -->
-<link href="../static/project/Login/css/style.css" rel='stylesheet' type='text/css' />
+<link href="style.css" rel='stylesheet' type='text/css' />
 <!-- font CSS -->
 <link href="//fonts.googleapis.com/css?family=Signika:300,400,700" rel="stylesheet">
 <link href="//fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
 
 <!--font CSS-->
-<script src="../static/Login/js/jquery2.0.3.min.js"></script>
+<script src="jquery2.0.3.min.js"></script>
 </head>
 <body class="dashboard-page">
 		<div class="main-grid">
@@ -58,7 +58,7 @@
     <!-- input-forms -->
     
     
-    <script type="text/javascript" src="../static/Login/js/valida.2.1.6.min.js"></script>
+    <script type="text/javascript" src="valida.2.1.6.min.js"></script>
     <script type="text/javascript" >
 
         $(document).ready(function() {
@@ -113,7 +113,7 @@
     </script>
     <!-- //input-forms -->
     <!--validator js-->
-    <script src="../static/project/Login/js/validator.min.js"></script>
+    <script src="validator.min.js"></script>
     <!--//validator js-->
 </body>
 </html>
