--- a/about.html
+++ b/about.html
@@ -26,11 +26,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //Meta tag Keywords -->
 
 	<!-- Custom-Files -->
-	<link rel="stylesheet" href="../static/project/css/bootstrap.css">
+	<link rel="stylesheet" href="bootstrap.css">
 	<!-- Bootstrap-Core-CSS -->
-	<link rel="stylesheet" href="../static/project/css/style.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="style.css" type="text/css" media="all" />
 	<!-- Style-CSS -->
-	<link href="../static/Project/css/font-awesome.min.css" rel="stylesheet">
+	<link href="font-awesome.min.css" rel="stylesheet">
 	<!-- Font-Awesome-Icons-CSS -->
 	<!-- //Custom-Files -->
 
